k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-backend
  namespace: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-backend
  template:
    metadata:
      labels:
        app: notes-backend
    spec:
      containers:
        - name: notes-backend
          image: tamaraaa46/notes-backend:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: notes-backend-service
  namespace: notes-app
spec:
  selector:
    app: notes-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
