k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-frontend
  namespace: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-frontend
  template:
    metadata:
      labels:
        app: notes-frontend
    spec:
      containers:
        - name: notes-frontend
          image: tamaraaa46/notes-frontend:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: notes-frontend-service
  namespace: notes-app
spec:
  selector:
    app: notes-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
