k8s/mongo.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: notes-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: notes-app
spec:
  serviceName: "mongo-headless"
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:4.4
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        volumeName: mongo-pv
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: notes-app
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless
  namespace: notes-app
spec:
  clusterIP: None
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
